gcc/testsuite/rust/rustc/ui/associated-types/associated-type-macro_dg.rs
fn main() {
    #[cfg(FALSE)]
    <() as module>::mac!(); // { dg-error "" "" { target *-*-* } }
}

